tests/errors/surf_lex_05.experr
error: invalid \x escape (expected hex digit)